# cliban

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum
cmd/cliban/: main.go
crates/cliban/: Cargo.toml
crates/cliban-core/: Cargo.toml
crates/cliban-core/src/: error.rs  lib.rs  migrations.rs  paths.rs  projection.rs  rows.rs  schema.rs  store.rs  time.rs
crates/cliban-core/src/contexts/: activity_log.rs  issues.rs  labels.rs  milestones.rs  mod.rs  projects.rs  relations.rs
crates/cliban-core/tests/: project_memory_migration.rs  round_trip.rs
crates/cliban-server/: Cargo.toml
crates/cliban-server/src/: commands.rs  config.rs  hostkey.rs  lib.rs  main.rs  server.rs  shell.rs
crates/cliban-server/tests/: commands.rs  config.rs  e2e.rs  hostkey.rs
crates/cliban-tenancy/: Cargo.toml
crates/cliban-tenancy/src/: error.rs  lib.rs  manager.rs  registry.rs
crates/cliban-tenancy/tests/: tenancy.rs
crates/cliban-tui/: Cargo.toml
crates/cliban-tui/src/: actions.rs  app.rs  buffers.rs  data.rs  input.rs  keybinds.rs  lib.rs  picker.rs  remote.rs  runtime.rs  session.rs
crates/cliban-tui/src/ui/: board.rs  card.rs  confirm_quit.rs  detail.rs  fuzzy.rs  help.rs  milestone_overlay.rs  mod.rs  picker.rs  top_bar.rs
crates/cliban/src/: descmd.rs  errors.rs  lib.rs  main.rs  migrate.rs  output.rs  search.rs  store_open.rs
crates/cliban/src/cmd/: fff.rs  issue.rs  label.rs  milestone.rs  mod.rs  project.rs
crates/cliban/tests/: golden.rs  migrate.rs  project_memory.rs
deploy/: cliband.service  config.example.toml
docs/plans/: 2026-05-19-cliban.md
docs/specs/: 2026-05-19-cliban-design.md
internal/cli/: buffer.go  buffer_test.go  editor.go  editor_test.go  errors.go  feature_tests_test.go  fff.go  fff_test.go  init.go  issue.go  issue_cmd_test.go  issue_editor_test.go  issue_workflow.go  issue_workflow_test.go  label.go  milestone.go  milestone_cmd_test.go  output.go  output_test.go  project.go  project_cmd_test.go  root.go  tui.go
internal/descmd/: descmd.go  descmd_test.go
internal/domain/: key.go  key_test.go  priority.go  priority_test.go  status.go  status_test.go  types.go
internal/issuebuf/: buffer.go  editor.go  milestone.go  milestone_test.go  project.go  project_test.go
internal/search/: bench_test.go  search.go  search_test.go  strip.go  strip_test.go
internal/store/: errors.go  issue.go  issue_test.go  issue_update_test.go  label.go  label_bulk_test.go  milestone.go  milestone_test.go  project.go  project_byid_test.go  project_test.go  relation.go  schema.sql  store.go  store_test.go
internal/tui/: app.go  app_test.go  board.go  board_edit_test.go  board_test.go  edit_keys_test.go  editor.go  issue.go  milestone_editor.go  milestone_editor_test.go  milestone_overlay_test.go  milestones.go  picker.go  picker_test.go  project_editor.go  project_editor_test.go  projects.go  styles.go
scripts/: smoke.sh
skill/cliban-skill/: SKILL.md
