[workspace]
resolver = "2"
members = ["crates/cliban-core", "crates/cliban"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
