[package]
name = "cliban-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "cliban storage + domain layer: rusqlite store + writer thread + domain contexts"

[dependencies]
rusqlite.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
