[package]
name = "cliban-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "cliban SSH daemon (cliband): russh listener, host key, TOML config"

[lib]
name = "cliban_server"
path = "src/lib.rs"

[[bin]]
name = "cliband"
path = "src/main.rs"

[dependencies]
russh.workspace = true
rand.workspace = true
toml.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["signal", "net"] }
clap = { version = "4", features = ["derive"] }
cliban-tenancy = { path = "../cliban-tenancy" }
cliban-core = { path = "../cliban-core" }
cliban-tui = { path = "../cliban-tui" }
ratatui.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["signal", "net", "time"] }
