[package]
name = "cliban"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "cliban CLI — kanban for the terminal, Rust reimplementation"

[lib]
name = "cliban"
path = "src/lib.rs"

[[bin]]
name = "cliban"
path = "src/main.rs"

[dependencies]
cliban-core = { path = "../cliban-core" }
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rusqlite.workspace = true
regex = "1"
